Now the website is ready for the production

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,10 +2,16 @@
 {% block title %}About Us{% endblock title %}
 {% block aboutactive %} active {% endblock aboutactive %}
 {% block body %}
-<div class="jumbotron">
+<div class="jumbotron mb-0">
   <h1 class="display-4 text-center">About Us</h1>
   <hr class="my-4">
-  <h5 class="text-center">The Largest Web Developer Site on the Internet</h5>
-  <p class="text-center">60 Million Visitors Every Month</p>
+  <h3 class="text-center">The Largest Web Developer Site on the Internet</h3>
+  <h6 class="text-center">60 Million Visitors Every Month</h6>
+  <hr class="my-4">
+  <div class="container">
+  <h6 class="text-center">This is E-Learning website where you find various type of content like programming, school content etc. This website provides tutorials of various programming languages and Computer subjects. The sole purpose of this website is to provide learning content for the students and professionals.</h6>
+  <h6 class="text-center">We are pleased to inform you that this site is consistently running for more than two years, we understand your attachment with the content, so committed to deliver you the best possible material.</h6>
+  <h6 class="text-center">The admin of the website is only me. You can login or signup and commant on videos. We provide free Youtube videos and notes on this websie. If you have any queries you can contact me by filling Contact form which I provide you.</h6>
+  </div>
 </div>
 {% endblock body %}
