--- a/templates/allsubject.html
+++ b/templates/allsubject.html
@@ -13,7 +13,7 @@
                     {{s.desc}}
                 </p>
                 <p>
-                    <a href="/videos/{{s.slug}}"><button class="btn btn-outline-danger">Start Watching »</button></a>
+                    <a href="/videos/{{s.slug}}"><button class="btn btn-outline-danger">Start learning »</button></a>
                 </p>
             </div>
             {% endfor %}
