--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-
+{% load static %}
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="{% static 'css/prism.css' %}">
+    <script src="{% static 'js/prism.js' %}"></script>
 
     <title>{% block title %}{% endblock title %}</title>
     <style>
@@ -28,13 +31,20 @@
             visibility: hidden;
         }
     }
+    #scroll{
+        height: 500px;
+        overflow-y: auto;
+    }
+    pre{
+        max-height: 614px;
+    }
     </style>
 </head>
 
 <body class="d-flex flex-column h-100">
     <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand h1" href="#">E-Learning</a>
+        <a class="navbar-brand h1" href="/">E-Learning</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -102,7 +112,7 @@
                         <div class="form-group">
                             <label for="uname">Username</label>
                             <input type="text" class="form-control" id="uname" name="uname"
-                                placeholder="Choose a Unique Username" required>
+                                placeholder="Choose a unique username (Lowercase & alphanumeric)" required>
                         </div>
                         <div class="form-group">
                             <label for="fname">First Name</label>
