--- a/templates/search.html
+++ b/templates/search.html
@@ -26,7 +26,7 @@ Array.from(previews).forEach((element)=>{
     <li>Try more general keywords.</li>
     <li>Try fewer keywords.</li>
     </ul>
-    {% endif %}
+    {% else %}
     {% for vds in allvds %}
     <h2>
         <a  href="/videos/{{vds.slug}}" class="text-dark">{{vds.title}}</a>
@@ -62,6 +62,6 @@ Array.from(previews).forEach((element)=>{
     </nav>
     </div>
     <!--end of Pagination-->
-
+    {% endif %}
 </div>
 {% endblock body %}
